set(target_name SdlTest)
add_executable(${target_name} sdl_test.cpp)
if (IOS)
    target_include_directories(${target_name} PUBLIC "/Users/pascal/dvp/OpenSource/ImGuiWork/hello_imgui/external/SDL/include/")
    target_link_directories(${target_name} PUBLIC "/Users/pascal/dvp/OpenSource/ImGuiWork/hello_imgui/external/SDL/Xcode-iOS/SDL/output/iOS/debug/")
    target_link_libraries(${target_name} PUBLIC SDL2)
    target_compile_definitions(${target_name} PUBLIC IOS)
else()
    #    target_link_libraries(${target_name} PUBLIC SDL2::SDL2main SDL2::SDL2-static)
    target_link_libraries(${target_name} PUBLIC SDL2main SDL2-static)
    target_link_libraries(${target_name} PUBLIC glad)
endif()